--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "Silicon/RISC-V/ProcessorPkg/Library/RiscVOpensbiLib/opensbi"]
-  path = Silicon/RISC-V/ProcessorPkg/Library/RiscVOpensbiLib/opensbi
-  url = https://github.com/riscv/opensbi
+	path = Silicon/RISC-V/ProcessorPkg/Library/RiscVOpensbiLib/opensbi
+	url = git@github.com:vlsunil/opensbi.git
+	branch = acpi_v1_aia_v1
